# cloud_demo

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 56f3fc7f1ed2_initial.py  757ebb2d489b_nullable_created_by.py  cf8a975d1fd9_nullable_ext.py
cloud/: asgi.py  db.py  settings.py
cloud/files/: router.py
cloud/models/: file.py
cloud/repository/: file.py
cloud/schema/: file.py
cloud/storage/: abstract.py
cloud/storage/providers/: files.py
docker/: migrate.Dockerfile
